objects/E2EAccGrpReqContactJunc__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>E2EAccGrpReqContactJuncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>E2E_Acc_Group_Setup_Request__c</fullName>
        <label>E2E Acc Group Setup Request</label>
        <referenceTo>E2E_Acc_Group_Setup_Request__c</referenceTo>
        <relationshipLabel>E2EAccGrpReqContactJuncs</relationshipLabel>
        <relationshipName>E2E_Acc_Group_Setup_Request</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isRemoveRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRemoveRequest</label>
        <type>Checkbox</type>
    </fields>
    <label>E2EAccGrpReqContactJunc</label>
    <nameField>
        <label>E2EAccGroupReqContactJunc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2EAccGrpReqContactJuncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>